# data-factory-testing-framework

./: .gitignore  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  .yamllint.yaml  DEVELOPMENT.md  DataFactoryTestingFramework.sln  MANIFEST.in  README.md  SUPPORT.md  pyproject.toml  setup.py
src/python/: README-Development.md  README.md  pyproject.toml
src/python/azure_data_factory_testing_framework/: __init__.py  test_framework.py
src/python/azure_data_factory_testing_framework/data_factory/: __init__.py  data_factory_test_framework.py  test_framework.py
src/python/azure_data_factory_testing_framework/data_factory/models/: __init__.py  _patch_models.py
src/python/azure_data_factory_testing_framework/deserializers/: _deserializer_data_factory.py  _deserializer_fabric.py  data_factory_deserializer.py  fabric_deserializer.py
src/python/azure_data_factory_testing_framework/deserializers/shared/: _data_factory_element_replacer.py
src/python/azure_data_factory_testing_framework/exceptions/: expression_parameter_not_found_error.py  unsupported_function_error.py  variable_not_found_error.py
src/python/azure_data_factory_testing_framework/fabric/: deserializer.py  fabric_test_framework.py
src/python/azure_data_factory_testing_framework/fabric/models/: data_factory_element.py  fabric_pipeline.py
src/python/azure_data_factory_testing_framework/functions/: __init__.py  _expression_activity.py  _expression_dataset.py  _expression_iteration_item.py  _expression_linked_service.py  _expression_parameter.py  _expression_variable.py  _string_utils.py  function_argument.py  function_call.py  function_parser.py  functions_math_implementation.py  functions_repository.py  functions_string_implementation.py
src/python/azure_data_factory_testing_framework/models/: __init__.py  _patch_models.py  data_factory_element.py  pipeline.py
src/python/azure_data_factory_testing_framework/models/activities/: activity.py  activity_dependency.py  control_activity.py  execute_pipeline_activity.py  for_each_activity.py  if_condition_activity.py  set_variable_activity.py  until_activity.py
src/python/azure_data_factory_testing_framework/models/expressions/: data_factory_element.py  expression.py
src/python/azure_data_factory_testing_framework/models/pipelines/: pipeline_resource.py
src/python/azure_data_factory_testing_framework/models/repositories/: data_factory_repository.py  data_factory_repository_factory.py  fabric_repository_factory.py
src/python/azure_data_factory_testing_framework/repositories/: data_factory_repository.py  data_factory_repository_factory.py  fabric_repository_factory.py
src/python/azure_data_factory_testing_framework/scripts/: models_expression_type_patcher.py
src/python/azure_data_factory_testing_framework/scripts/utils/: ast_utils.py
src/python/azure_data_factory_testing_framework/state/: dependency_condition.py  pipeline_run_state.py  run_parameter.py  run_parameter_type.py  run_state.py
src/python/data_factory_testing_framework/: __init__.py  test_framework.py
src/python/data_factory_testing_framework/exceptions/: activity_not_found_error.py  activity_not_found_exception.py  dataset_parameter_not_found_error.py  expression_parameter_not_found_error.py  function_call_invalid_arguments_count_error.py  linked_service_parameter_not_found_error.py  pipeline_activities_circular_dependency_error.py  pipeline_not_found_error.py  pipeline_not_found_exception.py  state_iteration_item_not_set.py  state_iteration_item_not_set_error.py  unsupported_function_error.py  variable_being_evaluated_does_not_exist_error.py  variable_does_not_exist_error.py  variable_not_found_error.py
src/python/data_factory_testing_framework/functions/: __init__.py  _expression_activity.py  _expression_dataset.py  _expression_iteration_item.py  _expression_linked_service.py  _expression_parameter.py  _expression_variable.py  function_argument.py  function_call.py  function_parser.py  functions_repository.py
src/python/data_factory_testing_framework/functions/expressions/: expression_activity.py  expression_dataset.py  expression_iteration_item.py  expression_linked_service.py  expression_parameter.py  expression_variable.py
src/python/data_factory_testing_framework/models/: __init__.py  _patch_models.py  data_factory_element.py  expression.py  patch_models.py  test_framework.py
src/python/data_factory_testing_framework/models/activities/: set_variable_activity.py
src/python/data_factory_testing_framework/models/base/: parameter_type.py  pipeline_run_variable.py  run_parameter.py  run_parameter_type.py  run_variable.py
src/python/data_factory_testing_framework/models/expressions/: _data_factory_element.py  expression.py
src/python/data_factory_testing_framework/models/pipelines/: pipeline_resource.py
src/python/data_factory_testing_framework/models/repositories/: data_factory_repository.py  data_factory_repository_factory.py  models_repository.py
src/python/data_factory_testing_framework/models/state/: pipeline_run_state.py  run_state.py
src/python/data_factory_testing_framework/scripts/: models_expression_type_patcher.py
src/python/data_factory_testing_framework/scripts/utils/: ast_utils.py  docstring_utils.py  string_utils.py
src/python/data_factory_testing_framework/state/: pipeline_run_state.py  run_parameter.py  run_state.py
src/python/example/batch_job/: batchjob_test.py
src/python/examples/batch_job/: batchjob_test.py  test_batchjob_functional.py  test_batchjob_unit.py
src/python/examples/batch_job/pipelines/: batch_job.json
src/python/examples/data_factory/batch_job/: test_batchjob_functional.py  test_batchjob_unit.py  test_data_factory_batchjob_functional.py
src/python/examples/fabric/batch_job/: test_batchjob_functional.py  test_batchjob_unit.py  test_fabric_batchjob_functional.py  (+1 more)
src/python/tests/: test_test_framework.py
src/python/tests/example/: batchjob_tests.py
src/python/tests/functions/: test_function_argument.py  test_function_call.py  test_function_parser.py
src/python/tests/playground/: example_test.py
(+563 files in other folders)
